Added 3D model loading.

--- a/notebooks/dicom_processor.ipynb
+++ b/notebooks/dicom_processor.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -86,18 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3D model saved to: c:\\project\\precision_pathways\\notebooks\\3d_objects\\dicom_model.stl\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "3D model saved to: c:\\project\\pk\\tracker\\notebooks\\../preccision-viewer/src/assets\\dicom_model.stl\n"
      ]
     }
    ],
@@ -111,7 +100,7 @@
     "\n",
     "# Define absolute paths for the DICOM and output folders\n",
     "dicom_folder = os.path.join(script_dir, \"dicoms\")\n",
-    "output_folder = os.path.join(script_dir, \"3d_objects\")\n",
+    "output_folder = os.path.join(script_dir, \"../precision-viewer/src/assets\")\n",
     "\n",
     "# Ensure the output folder exists\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
